# icp-evm-coprocessor-starter

./: .gitignore  Cargo.toml  README.md  deploy.sh  dfx.json  ic-test.json  initArgument.did
canisters/chain_fusion/: Cargo.toml  chain_fusion.did
canisters/chain_fusion/src/: job.rs  lib.rs  lifecycle.rs  logs.rs  state.rs
canisters/chain_fusion/src/job/: read_result.rs  submit_result.rs
contracts/: Coprocessor.sol
script/: Coprocessor.s.sol
tests/: Cargo.toml  build.rs  canisters.sh  download-pocket-ic.sh
tests/bindings/: chain_fusion.rs  evm_rpc.rs  mod.rs
tests/src/: chain_fusion.rs  lib.rs  tests.rs
tests/src/bindings/: chain_fusion.rs  evm_rpc.rs  mod.rs
tests/src/helpers/: evm.rs  http_outcalls.rs  icp.rs  mod.rs
tests_tmp/: Cargo.toml
tests_tmp/src/: tests.rs
tests_tmp/src/bindings/: chain_fusion.rs
