[package]
name = "chain_fusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-canisters-http-types = { git = "https://github.com/dfinity/ic" }
ic-cdk.workspace = true
ic-cdk-timers = "0.11"
ic-stable-structures = "0.6.4"
minicbor = { version = "0.24.0", features = ["alloc", "derive"] }
minicbor-derive = "0.15.0"
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
ethers-core.workspace = true
alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", tag = "v0.3.5-icp.1", default-features = false, features = [
  "icp",
  "sol-types",
  "json",
  "contract",
] }
getrandom = { version = "0.2.15", features = ["custom"] }